Fix profile picture overlapping right column on some screen sizes

--- a/httpdocs/css/members.css
+++ b/httpdocs/css/members.css
@@ -1,3 +1,8 @@
+#members-details-picture {
+    width: 100%;
+    max-width: 200px;
+}
+
 #members-send-message-button {
     display: none;
 }
